; ModuleID = '/home/carl/AnghaBench/linux/sound/core/extr_control_compat.c_get_elem_size.c'
source_filename = "/home/carl/AnghaBench/linux/sound/core/extr_control_compat.c_get_elem_size.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32)* @get_elem_size to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @get_elem_size(i32 %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  %6 = load i32, i32* %4, align 4
  switch i32 %6, label %19 [
    i32 128, label %7
    i32 130, label %12
    i32 131, label %17
    i32 129, label %18
  ]

7:                                                ; preds = %2
  %8 = load i32, i32* %5, align 4
  %9 = sext i32 %8 to i64
  %10 = mul i64 4, %9
  %11 = trunc i64 %10 to i32
  store i32 %11, i32* %3, align 4
  br label %20

12:                                               ; preds = %2
  %13 = load i32, i32* %5, align 4
  %14 = sext i32 %13 to i64
  %15 = mul i64 4, %14
  %16 = trunc i64 %15 to i32
  store i32 %16, i32* %3, align 4
  br label %20

17:                                               ; preds = %2
  store i32 512, i32* %3, align 4
  br label %20

18:                                               ; preds = %2
  store i32 4, i32* %3, align 4
  br label %20

19:                                               ; preds = %2
  store i32 -1, i32* %3, align 4
  br label %20

20:                                               ; preds = %19, %18, %17, %12, %7
  %21 = load i32, i32* %3, align 4
  ret i32 %21
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
